--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,10 @@ jobs:
       - uses: actions/checkout@v2
       # Runs a single command using the runners shell
       #- name: test
+      - run: echo ${{ secrets.DOCKER_USERNAME }}
+      - run: echo ${{ secrets.$DOCKER_PASSWORD }}
       - run: make build
+
 
       - uses: docker/build-push-action@v1
         with:
