--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
       #- name: test
       - run: echo ${{ secrets.DOCKER_USERNAME }}
       - run: echo ${{ secrets.DOCKER_PASSWORD }}
-      - run: echo ${{ secrets.DOCKER_HANS }}
+      #- run: echo ${{ secrets.DOCKER_HANS }}
 
       - run: make build
 
