--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,7 +35,7 @@ jobs:
           repository: tschm/jupyter
           dockerfile: Dockerfile
           tag_with_ref: true
-          tag_with_sha: true
+          #tag_with_sha: true
 
       - uses: docker/build-push-action@v1
         with:
@@ -44,4 +44,4 @@ jobs:
           repository: lobnek/jupyter
           dockerfile: Dockerfile
           tag_with_ref: true
-          tag_with_sha: true
+          #tag_with_sha: true
