--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,4 +32,14 @@ jobs:
           password: ${{ secrets.DOCKER_PASSWORD }}
           repository: tschm/jupyter
           dockerfile: Dockerfile
+          target: builder
+          tag_with_ref: true
+
+      - uses: docker/build-push-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+          repository: tschm/jupyter_beakerx
+          dockerfile: Dockerfile
+          target: beakerx
           tag_with_ref: true
