--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,18 @@ services:
      build:
        context: ""
        dockerfile: ./Dockerfile
+       target: builder
      volumes:
        - ./work:/home/jovyan/work
      ports:
-        - 5555:8888
+        - 8888:8888
+
+  beakerx:
+     build:
+       context: ""
+       dockerfile: ./Dockerfile
+       target: beakerx
+     volumes:
+       - ./work:/home/jovyan/work
+     ports:
+        - 8888:8888
