--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
       - run: echo "Checkout"
 
 
-      - uses: docker/build-push-action@v1
+      - uses: docker/build-push-action@v1.1.0
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
@@ -34,8 +34,9 @@ jobs:
           dockerfile: Dockerfile
           target: builder
           tag_with_ref: true
+          push: false
 
-      - uses: docker/build-push-action@v1
+      - uses: docker/build-push-action@v1.1.0
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
@@ -43,3 +44,4 @@ jobs:
           dockerfile: Dockerfile
           target: beakerx
           tag_with_ref: true
+          push: false
