--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,11 +35,11 @@ jobs:
           target: builder
           tag_with_ref: true
 
-      - uses: docker/build-push-action@v1.1.0
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-          repository: tschm/jupyter_beakerx
-          dockerfile: Dockerfile
-          target: beakerx
-          tag_with_ref: true
+#      - uses: docker/build-push-action@v1.1.0
+#        with:
+#          username: ${{ secrets.DOCKER_USERNAME }}
+#          password: ${{ secrets.DOCKER_PASSWORD }}
+#          repository: tschm/jupyter_beakerx
+#          dockerfile: Dockerfile
+#          target: beakerx
+#          tag_with_ref: true
