--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,12 +10,12 @@ services:
      ports:
         - 8888:8888
 
-  beakerx:
-     build:
-       context: ""
-       dockerfile: ./Dockerfile
-       target: beakerx
-     volumes:
-       - ./work:/home/jovyan/work
-     ports:
-        - 8888:8888
+  #beakerx:
+  #   build:
+  #     context: ""
+  #     dockerfile: ./Dockerfile
+  #     target: beakerx
+  #   volumes:
+  #     - ./work:/home/jovyan/work
+  #   ports:
+  #      - 8888:8888
