--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
           repository: tschm/jupyter
-          dockerfile: Dockerfile
+          dockerfile: binder/Dockerfile
           target: builder
           tag_with_ref: true
 
